# strata-mcp

./: Cargo.toml  README.md
src/: convert.rs  error.rs  lib.rs  main.rs  server.rs  session.rs
src/tools/: branch.rs  bundle.rs  config.rs  database.rs  event.rs  json.rs  kv.rs  mod.rs  search.rs  space.rs  state.rs  txn.rs  vector.rs
tests/: integration.rs
